[metadata]
name = knav-io
version = 0.1
description = README.rst
url = https://github.com/xKern/knav-io
author = Amrutha N Manavendren
author_email = amruthanm333@gmail.com
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
